spaces in jvm args in jnlp